fix mobile view

--- a/index.html
+++ b/index.html
@@ -103,7 +103,10 @@
 <body>
     <div class="container">
         <h1>Redirecting to Your Destination...</h1>
-        <p>You will be redirected to <a href="https://2ly.link/20H2e">https://whatley95.github.io/dev-profile/</a> in 3 seconds.</p>
+        <p>You will be redirected to 
+            <p>
+                <a href="https://2ly.link/20H2e">https://whatley95.github.io/dev-profile/</a></p> 
+                in 3 seconds.</p>
         <p>If you are not redirected, click the link above.</p>
         <div class="spinner"></div>
     </div>
