--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         }
 
         body {
-            font-family: 'Roboto', sans-serif;
-            background: linear-gradient(135deg, #282c34, #0d1117);
-            color: #61dafb;
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(135deg, #1a1a1a, #0d0d0d);
+            color: #e0e0e0;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -25,80 +25,52 @@
             text-align: center;
             padding: 20px;
             overflow: hidden;
-            animation: backgroundAnimation 10s infinite alternate;
+            background-image: url('background-pattern.png'); /* Optional: Add a subtle background pattern */
+            background-size: cover;
         }
 
-        @keyframes backgroundAnimation {
-            0% {
-                background: linear-gradient(135deg, #282c34, #0d1117);
-            }
-            50% {
-                background: linear-gradient(135deg, #0d1117, #21252b);
-            }
-            100% {
-                background: linear-gradient(135deg, #21252b, #0d1117);
-            }
-        }
-
-        main {
-            background-color: rgba(28, 31, 38, 0.9);
-            border-radius: 12px;
+        .container {
+            background-color: rgba(30, 30, 30, 0.9);
+            border-radius: 15px;
             padding: 40px;
-            box-shadow: 0 12px 40px rgba(0, 0, 0, 0.7);
-            max-width: 600px;
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.8);
+            max-width: 500px;
             width: 100%;
-            color: #61dafb;
-            animation: slideUp 1s ease-out;
-            position: relative;
+            animation: fadeIn 1s ease-in-out;
         }
 
-        @keyframes slideUp {
+        @keyframes fadeIn {
             from {
-                transform: translateY(50px);
                 opacity: 0;
+                transform: translateY(20px);
             }
             to {
-                transform: translateY(0);
                 opacity: 1;
+                transform: translateY(0);
             }
         }
 
         h1 {
-            font-size: 36px;
+            font-size: 28px;
             margin-bottom: 20px;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-            transition: transform 0.3s ease;
-        }
-
-        h1:hover {
-            transform: scale(1.05);
+            color: #ffcc00;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
         }
 
         p {
-            font-size: 18px;
+            font-size: 16px;
             margin-bottom: 15px;
-            line-height: 1.6;
-        }
-
-        a {
-            color: #21a1f1;
-            text-decoration: none;
-            font-weight: bold;
-            transition: color 0.3s ease;
-            word-break: break-all;
-        }
-
-        a:hover {
-            color: #84dbff;
+            line-height: 1.5;
+            color: #b3b3b3;
         }
 
         .spinner {
             margin: 20px auto;
-            width: 60px;
-            height: 60px;
-            border: 8px solid rgba(255, 255, 255, 0.1);
+            width: 50px;
+            height: 50px;
+            border: 6px solid rgba(255, 255, 255, 0.1);
             border-radius: 50%;
-            border-top: 8px solid #61dafb;
+            border-top: 6px solid #ffcc00;
             animation: spin 1s linear infinite;
         }
 
@@ -111,82 +83,36 @@
             }
         }
 
-        .progress-bar {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            height: 4px;
-            background-color: #61dafb;
-            animation: progress 5s linear forwards;
-        }
-
-        @keyframes progress {
-            0% {
-                width: 0%;
-            }
-            100% {
-                width: 100%;
-            }
-        }
-
-        main:hover {
-            box-shadow: 0 15px 50px rgba(0, 0, 0, 0.8);
-            transform: scale(1.02);
-        }
-
         .redirect-btn {
-            background-color: #21a1f1;
-            color: #fff;
-            padding: 10px 20px;
+            background-color: #ffcc00;
+            color: #1a1a1a;
+            padding: 12px 24px;
             border: none;
             border-radius: 5px;
             cursor: pointer;
             margin-top: 20px;
+            font-size: 16px;
             transition: background-color 0.3s ease, transform 0.2s ease;
-            position: relative;
-            overflow: hidden;
         }
 
         .redirect-btn:hover {
-            background-color: #1a87d9;
-            transform: scale(1.05);
-            animation: bounce 0.3s;
-        }
-
-        @keyframes bounce {
-            0%, 20%, 50%, 80%, 100% {
-                transform: translateY(0);
-            }
-            40% {
-                transform: translateY(-10px);
-            }
-            60% {
-                transform: translateY(-5px);
-            }
-        }
-
-        .redirect-btn:disabled {
-            background-color: #888;
-            cursor: not-allowed;
+            background-color: #e6b800;
+            transform: translateY(-2px);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
         }
 
         @media (max-width: 600px) {
             h1 {
-                font-size: 28px;
+                font-size: 24px;
             }
 
             p {
-                font-size: 16px;
-            }
-
-            main {
-                padding: 20px;
+                font-size: 14px;
             }
 
             .spinner {
-                width: 50px;
-                height: 50px;
-                border-width: 6px;
+                width: 40px;
+                height: 40px;
             }
         }
     </style>
@@ -203,19 +129,16 @@
 </head>
 
 <body>
-    <main role="main">
-        <h1>Redirecting to Your Destination...</h1>
+    <div class="container">
+        <h1>Redirecting...</h1>
         <p>You will be redirected to:</p>
         <p>
-            <a href="https://2ly.link/20H2e">https://whatley95.github.io/dev-profile/</a>
+            <strong>https://whatley95.github.io/dev-profile/</strong>
         </p>
         <p>If you are not redirected, click the button below.</p>
         <div class="spinner" role="status" aria-live="polite" aria-label="Loading..."></div>
-
-        <div class="progress-bar"></div>
-
         <button class="redirect-btn" onclick="manualRedirect()">Redirect Now</button>
-    </main>
+    </div>
 </body>
 
 </html>
