--- a/index.html
+++ b/index.html
@@ -15,27 +15,26 @@
         }
 
         body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f9f9f9; /* Light background color */
-            color: #333; /* Dark text color for contrast */
+            font-family: 'Roboto', sans-serif; /* Material Design font */
+            background-color: #121212; /* Dark background */
+            color: #e0e0e0; /* Light text for readability */
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
             text-align: center;
-            padding: 20px;
             position: relative;
             overflow: hidden;
         }
 
         .container {
-            background-color: #ffffff; /* White background for the container */
-            border-radius: 20px;
+            background-color: #1e1e1e; /* Dark container */
+            border-radius: 8px; /* Rounded corners */
             padding: 40px;
-            box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
-            max-width: 500px;
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3); /* Subtle shadow */
+            max-width: 400px; /* Width constraint */
             width: 100%;
-            animation: fadeIn 1s ease-in-out;
+            animation: fadeIn 0.5s ease-in-out;
             position: relative;
             z-index: 1; /* Bring the container above the background */
         }
@@ -52,26 +51,25 @@
         }
 
         h1 {
-            font-size: 32px;
+            font-size: 24px;
             margin-bottom: 20px;
-            color: #007BFF; /* Blue header color */
-            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+            color: #00b0ff; /* Slightly less bright blue */
         }
 
         p {
-            font-size: 18px;
+            font-size: 16px;
             margin-bottom: 15px;
-            line-height: 1.6;
-            color: #555; /* Softer text color */
+            line-height: 1.5;
+            color: #b0bec5; /* Light gray for softer text */
         }
 
         .spinner {
             margin: 20px auto;
-            width: 60px;
-            height: 60px;
-            border: 6px solid rgba(0, 0, 0, 0.1);
+            width: 40px;
+            height: 40px;
+            border: 5px solid rgba(255, 255, 255, 0.1);
             border-radius: 50%;
-            border-top: 6px solid #007BFF; /* Spinner color */
+            border-top: 5px solid #00b0ff; /* Spinner color */
             animation: spin 1s linear infinite;
         }
 
@@ -85,44 +83,50 @@
         }
 
         .redirect-btn {
-            background-color: #007BFF; /* Button color */
-            color: #ffffff; /* White text color */
-            padding: 12px 24px;
+            background-color: #00b0ff; /* Slightly less bright blue button */
+            color: #ffffff; /* White text */
+            padding: 12px 20px;
             border: none;
-            border-radius: 5px;
+            border-radius: 4px; /* Rounded corners */
             cursor: pointer;
             margin-top: 20px;
             font-size: 16px;
             transition: background-color 0.3s ease, transform 0.2s ease;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
         }
 
         .redirect-btn:hover {
-            background-color: #0056b3; /* Darker shade on hover */
+            background-color: #0081cb; /* Darker shade on hover */
             transform: translateY(-2px);
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
         }
 
-        /* Floating circle animation */
-        .floating-circle {
+        /* Floating letters */
+        .floating-letter {
             position: absolute;
-            background-color: rgba(0, 123, 255, 0.1); /* Light blue floating circles */
-            border-radius: 50%;
-            animation: float 6s ease-in-out infinite;
-            z-index: 0;
+            font-size: 4rem; /* Large text size */
+            font-weight: bold;
+            color: rgba(0, 176, 255, 0.1); /* Soft cyan color */
+            white-space: nowrap;
+            opacity: 0.1; /* Very light text */
+            animation: float 10s ease-in-out infinite; /* Infinite floating animation */
         }
 
         @keyframes float {
             0% {
-                transform: translateY(0);
-                opacity: 1;
+                transform: translate(0, 0);
+            }
+            25% {
+                transform: translate(100px, 50px);
             }
             50% {
-                transform: translateY(-30px);
-                opacity: 0.5;
+                transform: translate(-50px, 100px);
+            }
+            75% {
+                transform: translate(50px, -100px);
             }
             100% {
-                transform: translateY(0);
-                opacity: 1;
+                transform: translate(0, 0);
             }
         }
     </style>
@@ -135,6 +139,23 @@
         function manualRedirect() {
             window.location.href = 'https://2ly.link/20H2e';
         }
+
+        // Function to create floating letters
+        function createFloatingLetters() {
+            const text = "WHATLEY";
+            for (let i = 0; i < text.length; i++) {
+                const letter = document.createElement('div');
+                letter.className = 'floating-letter';
+                letter.textContent = text[i];
+                letter.style.left = Math.random() * 100 + 'vw'; // Random horizontal position
+                letter.style.top = Math.random() * 100 + 'vh'; // Random vertical position
+                letter.style.animationDuration = Math.random() * 5 + 5 + 's'; // Random duration between 5s and 10s
+                letter.style.opacity = Math.random() * 0.2 + 0.1; // Random opacity
+                document.body.appendChild(letter);
+            }
+        }
+
+        createFloatingLetters(); // Call the function to create floating letters
     </script>
 </head>
 
@@ -149,11 +170,6 @@
         <div class="spinner" role="status" aria-live="polite" aria-label="Loading..."></div>
         <button class="redirect-btn" onclick="manualRedirect()">Redirect Now</button>
     </div>
-    
-    <!-- Floating circles for background effect -->
-    <div class="floating-circle" style="width: 100px; height: 100px; top: 20%; left: 20%;"></div>
-    <div class="floating-circle" style="width: 80px; height: 80px; top: 60%; left: 70%; animation-duration: 8s;"></div>
-    <div class="floating-circle" style="width: 120px; height: 120px; top: 80%; left: 10%; animation-duration: 7s;"></div>
 </body>
 
 </html>
